# dbi.poc

./: .envrc  .gdbinit  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  notes  runs.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci-cpp.yml  internal-crash-reproduction.yml  pr-ci.yml  stack-overflow-76346620.yml
docs/: DBI.md  DynamoRIO.md
docs/css.csail.mit.edu/6.858/2010/labs/dr-docs/: API_BT.html  API_samples.html  API_tutorial.html  API_tutorial_bbdynsize1.html  API_tutorial_bbdynsize2.html  API_tutorial_bbdynsize3.html  API_tutorial_bbdynsize4.html  API_tutorial_bbdynsize5.html  API_tutorial_bbdynsize6.html  API_tutorial_bbdynsize7.html  API_tutorial_bbdynsize8.html  API_tutorial_bbdynsize9.html  API_tutorial_steal_reg1.html  annotated.html  dr__api_8h.html  dr__app_8h.html  dr__config_8h.html  dr__defines_8h.html  dr__events_8h.html  dr__inject_8h.html  dr__ir__instr_8h.html  dr__ir__instrlist_8h.html  dr__ir__macros_8h.html  dr__ir__opcodes_8h.html  dr__ir__opnd_8h.html  dr__ir__utils_8h.html  dr__proc_8h.html  dr__tools_8h.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_0x61.html  globals_0x62.html  globals_0x63.html  globals_0x64.html  globals_0x65.html  globals_0x66.html  globals_0x67.html  (+73 more)
logs/: internal-crash-reproduction-callstack.txt
scripts/: build  debug  run
scripts/gdb/: dps_cmd.gdb  gdb-memquery.py  init.gdb  setbt64_cmd.gdb  setbt_cmd.gdb
scripts/shell/: build  debug  docker-build  docker-push  docker-run  drio-setup  run  run-thread-private
src/: client.cpp  example.cpp  main.cpp
src/annotations/: annotation.cpp  annotation.h  annotation_client.cpp
src/average_bb_size/: average_bb_size_client.cpp
src/hello_world/: hello_world_app.cpp  hello_world_client.cpp
src/inc2add/: inc2add_app.cpp  inc2add_client.cpp
